--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -7,7 +7,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     <title>{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}</title>
     <link
           rel="stylesheet"
-          href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          href="/styles/leaflet-styles.css"
         />
     {%include "components/pageheader.njk"%}
     {% for imp in dynamics.common.head %}
