--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -78,12 +78,6 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       {% endfor %}
     </main>
 
-    {% raw %}
-    <script type="module">
-      window.fileTree = {{ filetree | js }};
-    </script>
-    {% endraw %}
-
     {% if settings.dgShowBacklinks === true or settings.dgShowLocalGraph === true or settings.dgShowToc === true%}
       {%include "components/sidebar.njk"%}
     {% endif %}
@@ -103,5 +97,6 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
     <script src="/assets/leaflet-maps.js"></script>
+    <script type="module"> window.fileTree = {{ filetree | js }}; </script>
   </body>
 </html>
