--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,4 +1,4 @@
-body {
+
     /***
       ADD YOUR CUSTOM STYLING HERE. (INSIDE THE body {...} section.)
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
@@ -10,4 +10,8 @@ body {
     //  h1 {
     //   color: black;
     //  }
+
+    
+.content {
+    max-width: 1000px;
 }
