--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -491,7 +491,7 @@ ul.task-list {
     font-size: 1.2rem;
     cursor: pointer;
 
-    &. {
+    &.active {
         border: 2px solid var(--text-accent);
     }
 }
