--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -414,11 +414,11 @@ ul.task-list {
 
 .notelink.active-note {
     a {
-        color: #C88D63;
+        color: #FCF8E9;
     }
 
-    color: var(--text-accent);
-    background-color: var(--background-primary);
+    color: #FCF8E9;
+    background-color: #8B4513;
     transform: translateX(10px);
 }
 
