--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -10,8 +10,8 @@
     //  h1 {
     //   color: black;
     //  }
-
-    
+@font-face { font-family: Cinzel Decorative; src: url('/assets/fonts/cinzelDecorative-Regular.ttf'); } 
+@font-face { font-family: MR Eaves SC Remake Medium; src: url('/assets/fonts/MrEavesSCRemakeMedium.otf'); }     
 .content {
     max-width: 1000px;
 }
