--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -11,7 +11,8 @@
     //   color: black;
     //  }
 @font-face { font-family: Cinzel Decorative; src: url('/assets/fonts/CinzelDecorative-Regular.ttf'); } 
-@font-face { font-family: MR Eaves SC Remake Medium; src: url('/assets/fonts/MrEavesSCRemakeMedium.otf'); }     
+@font-face { font-family: MR Eaves SC Remake Medium; src: url('/assets/fonts/MrEavesSCRemakeMedium.otf'); }
+@font-face { font-family: Bookinsanity; src: url('/assets/fonts/Bookinsanity.otf'); } 
 .content {
     max-width: 1000px;
 }
