--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -13,6 +13,11 @@
 @font-face { font-family: Cinzel Decorative; src: url('/assets/fonts/CinzelDecorative-Regular.ttf'); } 
 @font-face { font-family: MR Eaves SC Remake Medium; src: url('/assets/fonts/MrEavesSCRemakeMedium.otf'); }
 @font-face { font-family: Bookinsanity; src: url('/assets/fonts/Bookinsanity.otf'); } 
+
+p {
+      font-family: 'Bookinsanity', serif; /* This sets the font for all p tags */
+    }
+
 .content {
     max-width: 1000px;
 }
