--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -312,6 +312,7 @@ ul.task-list {
     color: var(--text-muted);
     overflow-y: auto;
     width: 250px;
+    border-right: solid 1pt #8B4513;
     h1 {
         font-size: 32px !important;
     }
